third_party/move/move-compiler/tests/move_check/unit_test/multiple_errors.unit_test.exp
error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/unit_test/multiple_errors.move:27:7
   │
26 │     #[test(_a=@0x1)]
   │       ---- Attribute previously given here
27 │     #[test(_b=@0x2)]
   │       ^^^^^^^^^^^^^ Duplicate attribute 'test' attached to the same item

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/unit_test/multiple_errors.move:42:7
   │
41 │     #[expected_failure]
   │       ---------------- Attribute previously given here
42 │     #[expected_failure]
   │       ^^^^^^^^^^^^^^^^ Duplicate attribute 'expected_failure' attached to the same item

